--- a/products/product.css
+++ b/products/product.css
@@ -1,14 +1,47 @@
-.veggie-list {
-    border: solid 10px black;
-    border-radius: 5px;
+nav {
     display: flex;
-    align-items: center;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    height: 200px;
-    width: 150px;
+    justify-content: flex-end;
+    background-color: aqua;
+    border-radius: 10%;
 }
+
+.nav-bar-home {
+   width: 50%;
+   display:flex;
+   justify-content:flex-start;
+   border-radius: 10%;    
+}
+
+.nav-bar-other {
+   width: 50%;
+   display:flex;
+   justify-content:flex-end;
+   justify-content:space-around;
+   border-radius: 10%;
+}
+
+nav li {
+   display: flex;
+   justify-content: center;
+   list-style: none;
+   background-color: burlywood;
+   border-radius: 10%;
+   width: 20%;
+} 
+
+#veggie-list {
+        background-color: aqua;
+        border-color: solid 5px black;
+        margin: auto;
+        padding: 10px;
+        justify-content: center; 
+        height: 150px;
+        width: 25%;
+        list-style: none;
+        justify-content: space-around;
+        border-radius: 10%;
+        box-shadow: 5px 7px burlywood;
+    }
 
 .veggie-list > img {
     width: 100px; 
