--- a/shopping-cart/cart-style.css
+++ b/shopping-cart/cart-style.css
@@ -1,3 +1,34 @@
+nav {
+    display: flex;
+    justify-content: flex-end;
+    background-color: aqua;
+    border-radius: 10%;
+}
+
+.nav-bar-home {
+   width: 50%;
+   display:flex;
+   justify-content:flex-start;
+   border-radius: 10%;    
+}
+
+.nav-bar-other {
+   width: 50%;
+   display:flex;
+   justify-content:flex-end;
+   justify-content:space-around;
+   border-radius: 10%;
+}
+
+nav li {
+   display: flex;
+   justify-content: center;
+   list-style: none;
+   background-color: burlywood;
+   border-radius: 10%;
+   width: 20%;
+} 
+
 table {
     width: 500px;
 }
